--- a/index.html
+++ b/index.html
@@ -47,3 +47,6 @@
   
   <h2>Derechos del usuario:</h2>
   <p>Los usuarios tienen derecho a acceder, corregir y eliminar la información no personal recopilada a través de los anuncios. Para ejercer estos
+  
+  <h2>Cambios en la política de privacidad:</h2>
+  <p>Esta política de privacidad puede actualizarse periódicamente para reflejar los cambios en nuestras prácticas de recopilación y uso de la información. Se te notificarán los cambios significativos mediante una notificación en la aplicación o por otros medios razonables. Si tienes alguna pregunta o inquietud sobre esta política de privacidad, por favor, contáctanos a través de gabrielkeys95@gmail.com.
